01.nginx_ingress/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dataplatform-ingress #name of ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod #change with your issuer
spec:
  ingressClassName: nginx
  tls: #config domain you want to setup tls
    - hosts:
        - jupyter.dataverse.com.vn
        - trino.dataverse.com.vn
        - airflow.dataverse.com.vn
        - ranger.dataverse.com.vn
      secretName: tls #name of secret tls you create before
  rules:
    - host: trino.dataverse.com.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trino
                port:
                  number: 8080
    - host: ranger.dataverse.com.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ranger-admin
                port:
                  number: 6080
